2005-04-12  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Removed explicit placement from geometry
	settings. It's the windowmanager's job to place new windows.

2004-04-11  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: one to one chat added; /msg now emits '-type normal';
        /chat <nick> msg will open a chat window, as will double clicking on
        the nick in the online users list; user info is now a right click
        action.
        * tkchat.tcl: fix new message notify for private chats; fix /me in
        private chats.

2005-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added some error checking during some server downtime.

2005-03-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Bug #1156611 fixed. It seems jabberlib changed to
	interface for the send_iq command.
	* tkchat.tcl: Fixed a problem with the SASL authentication code.
	* tkchat.tcl: Improved handling of roster status change messages.

2005-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: bug #1153603 - fix error reporting on network errors.
	* tkchat.tcl: bug #1085174 - fail more gracefully if the history
	logs are unavailable. Make the history get use async http.
	* tkchat.tcl: bug #1154862 - fixed varname in SendAuthOld.
	Bug #1154619 - require tile 0.5. 0.4 can segfault on solaris.
	Fixed display of multiple-line posts with hidden timestamps for
	fixed Tk 8.5. Checked on 8.4 and 8.5.

2005-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Get the babelfish code to use utf-8. This fixes
	translation of Russian in both directions. Probably Asian
	languages too.
	Show SSL options as disabled when SSL unavailable.

2005-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed encoding of the channel after starttls
	negotiation. Also encoding of the .tkchatrc file.
	Added a 'No SSL' option and an entry field for the conference to
	join to the login dialog.